# sfogliaccio

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
.github/workflows/: build.yml
build-appimage/SfogliAccio.AppDir/: .DirIcon  AppRun  sfogliaccio.desktop
build-appimage/SfogliAccio.AppDir/usr/lib/: libQt6Concurrent.so.6  libQt6PrintSupport.so.6  libacl.so.1  libarchive.so.13  libavahi-client.so.3  libavahi-common.so.3  libblkid.so.1  libbrotlienc.so.1  libduktape.so.207  libgif.so.7  libgio-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgumbo.so.3  libjbig2dec.so.0  libleancrypto.so.1  libleptonica.so.6  liblz4.so.1  liblzma.so.5  libmount.so.1  libnghttp2.so.14  libngtcp2.so.16  libngtcp2_crypto_ossl.so.0  libopenjp2.so.7  libproxy.so.1  libssl.so.3  libsystemd.so.0  libtesseract.so.5  libwebpmux.so.3  libxcb-cursor.so.0  libxcb-glx.so.0  libxcb-icccm.so.4  libxcb-image.so.0  libxcb-keysyms.so.1  libxcb-randr.so.0  libxcb-render-util.so.0  libxcb-shape.so.0  libxcb-sync.so.1  libxcb-util.so.1  libxcb-xfixes.so.0  (+3 more)
build-appimage/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  sfogliaccio
build-appimage/cmake-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-appimage/cmake-build/sfogliaccio_autogen/: deps  mocs_compilation.cpp
build-appimage/cmake-build/sfogliaccio_autogen/6YEA5652QU/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PdfDocument.cpp  moc_PdfDocument.cpp.d  moc_PdfView.cpp  moc_PdfView.cpp.d  moc_SearchBar.cpp  moc_SearchBar.cpp.d  moc_SidebarWidget.cpp  moc_SidebarWidget.cpp.d  moc_TitleBar.cpp  moc_TitleBar.cpp.d  moc_ZoomController.cpp  moc_ZoomController.cpp.d
include/: MainWindow.h  PdfDocument.h  PdfView.h  SearchBar.h  SidebarWidget.h  Theme.h  TitleBar.h  ZoomController.h
resources/: sfogliaccio.desktop
scripts/: build-appimage.sh  build-windows.sh
src/: MainWindow.cpp  PdfDocument.cpp  PdfView.cpp  SearchBar.cpp  SidebarWidget.cpp  TitleBar.cpp  ZoomController.cpp  main.cpp
